--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  font-family: "Poppins";
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.css-cveggr-MuiListItemIcon-root {
+  align-items: center;
+}
+
+.navbar {
+  position: fixed;
+  box-shadow: 0 4px 4px rgba(116, 116, 116, 0.26);
+  background-color: rgb(0, 128, 255);
+  color: white;
+  font-weight: bold;
+}
+
+.cover {
+  width: 100%;
+  height: 64px;
+}
+
+.alignment {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.opened {
+  margin-left: 260px;
+  transition: 0.2s ease-in-out;
+}
+
+.closed {
+  margin-left: 80px;
+  transition: 0.2s;
+  transition: 0.2s ease-in-out;
 }
