--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,27 @@ code {
   text-align: center;
   color: gray;
 }
+.pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout {
+  background-color: rgb(80 7 80);
+}
+
+.pro-sidebar
+  .pro-menu.shaped
+  .pro-menu-item
+  > .pro-inner-item
+  > .pro-icon-wrapper {
+  background-color: transparent !important;
+}
+
+.react-slidedown .pro-inner-list-item {
+  background-color: #44003d;
+}
+
+.pro-sidebar.collapsed
+  .pro-menu
+  > ul
+  > .pro-menu-item.pro-sub-menu
+  > .pro-inner-list-item
+  > .popper-inner {
+  background-color: #44003d;
+}
